--- a/Aplikacija/Prototip/Projekat_1/Pages/JedanVodic.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JedanVodic.cshtml
@@ -2,3 +2,22 @@
 @model Projekat_1.JedanVodicModel
 @{
 }
+
+<form>
+    <div class="form-group">
+    <label for="ocene">Oceni vodiča</label>
+    <select class="form-control" id="ocene">
+      <option>10</option>
+      <option>9</option>
+      <option>8</option>
+      <option>7</option>
+      <option>6</option>
+      <option>5</option>
+      <option>4</option>
+      <option>3</option>
+      <option>2</option>
+      <option>1</option>
+    </select>
+  </div>
+  <button type="submit" class="btn btn-primary">Oceni</button>
+</form>
