--- a/Aplikacija/Prototip/Projekat_1/wwwroot/css/site.css
+++ b/Aplikacija/Prototip/Projekat_1/wwwroot/css/site.css
@@ -85,3 +85,33 @@ body {
   border: 2px solid rgb(105, 196, 238);
   background-color: rgb(126, 126, 235);
 }
+
+.kviz-kontejner
+{
+  border: 3px solid chartreuse;
+  padding: 5px;
+  width: 500px;
+}
+
+.redni-broj-pitanja{
+  text-align: center;
+  margin: 10px;
+ background-color: palegreen;
+ margin:auto;
+}
+
+.pitanje{
+  margin-bottom: 5px;
+  text-align: center;
+  color: palevioletred;
+  font-style: initial;
+  font-size: 25px;
+}
+
+.odgovori div
+{
+  width: 300px;
+  border: 2px solid black;
+  margin: 5px;
+
+}
