--- a/Aplikacija/Prototip/Projekat_1/Pages/Index.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Index.cshtml
@@ -7,3 +7,9 @@
 <div class="text-center">
     <h1 class="display-4">Organizacija Niškog Turizma</h1>
 </div>
+
+<h2> <a asp-page="./Vodici">Vodici </a></h2>
+<h2> <a asp-page="./Znamenitosti">Znamenitosti</a> </h2>
+<h2> <a asp-page="./HallOfFame"> Hall of Fame </a> </h2>
+<h2> <a asp-page="./JedanKviz">Jedan kviz - primer</a> </h2>
+<h2> <a asp-page="./KorisnickiNaloziVodica">Korisnicki nalozi vodica</a> </h2>
