--- a/Aplikacija/Prototip/Projekat_1/Pages/JedanVodic.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JedanVodic.cshtml
@@ -3,7 +3,20 @@
 @{
 }
 
-<form>
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">Ime:Petar</li>
+    <li class="list-group-item">Prezime:Petrovic</li>
+    <li class="list-group-item">Pol:M</li>
+    <li class="list-group-item">Broj Telefona:225883</li>
+  </ul>
+  <div class="card-body">
+    <button type="submit" class="btn btn-primary">Oceni Vodica</button>
+  </div>
+</div>
+
+@* <form>
     <div class="form-group">
     <label for="ocene">Oceni vodiča</label>
     <select class="form-control" id="ocene">
@@ -20,4 +33,4 @@
     </select>
   </div>
   <button type="submit" class="btn btn-primary">Oceni</button>
-</form>
+</form> *@
