--- a/Aplikacija/Prototip/Projekat_1/Pages/Index.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Index.cshtml
@@ -13,3 +13,8 @@
 <h2> <a asp-page="./HallOfFame"> Hall of Fame </a> </h2>
 <h2> <a asp-page="./JedanKviz">Jedan kviz - primer</a> </h2>
 <h2> <a asp-page="./KorisnickiNaloziVodica">Korisnicki nalozi vodica</a> </h2>
+<h2> <a asp-page="./CustomRezervacije">Custom Rezervacije</a> </h2>
+<h2> <a asp-page="./Rezervacije">Rezervacije</a> </h2>
+<h2> <a asp-page="./Ture">Ture</a> </h2>
+<h2> <a asp-page="./AddTure">Dodavanje ture</a> </h2>
+
