--- a/Aplikacija/Prototip/Projekat_1/Pages/Shared/_Layout.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Prijava">Prijavi se</a>
                         </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Registracija">Registruj se</a>
+                        </li>
                     </ul>
                 </div>
             </div>
