--- a/Aplikacija/Prototip/Projekat_1/Pages/Rezervacije.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Rezervacije.cshtml
@@ -10,37 +10,15 @@
 
 
 
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">ID rezervacije</th>
-      <th scope="col">Id ture</th>
-      <th scope="col">Vodic</th>
-      <th scope="col">Korisnik</th>
-      <th scope="col">Datum</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>12</td>
-      <td>Milos Markovic</td>
-      <td>Stefan Stefanovic</td>
-      <td>15.01.2020.</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>74</td>
-      <td>Milan Mikic</td>
-      <td>Sanja Aleksic</td>
-      <td>5.03.2020.</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>12</td>
-      <td>Milos Markovic</td>
-      <td>Marko Markovic</td>
-      <td>25.04.2020.</td>
-    </tr>
-  </tbody>
-</table>
+<form method="get">
+    @foreach (var rezervacija in Model.SveRezervacije)
+    {
+        <div> 
+            <p> Id vodica: @rezervacija.IdvodicaRez</p>
+            <p>Id turiste: @rezervacija.IdturisteRez</p>
+            <p> Broj Osoba: @rezervacija.BrojOsoba</p>
+            <p> Datum izvodjenja: @rezervacija.DatumIzvodjenja</p>
+            <a asp-page="./JednaRezervacija/" asp-route-id="@rezervacija.Idrezervacije">Prikazi detalje</a>
+        </div>
+    }
+</form>
