--- a/Aplikacija/Prototip/Projekat_1/Pages/CustomRezervacija.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/CustomRezervacija.cshtml
@@ -4,44 +4,27 @@
      ViewData["Title"] = "Custom Rezervacija";
 }
 
-<div class="custom kontejner">
-    <div class="form-group">
-         <label>Izaberi znamenitosti</label>
-  <select class="form-control" id="izaberiZnamenitosti" >
-                     <option value="0" selected>Znamenitosti</option>
-                     <option value="1"> Tvrdjava </option>
-                     <option value="2"> Bubanj </option>
-                      <option value="0"> Cele Kula </option>
- </select>
-    
-     <div class="form-group">
-                 <label>Broj osoba</label>
-                 <select class="form-control" id="room_number" onchange="finalCost()">
-                     <option value="0"> 0 </option>
-                     <option value="1"> 1 </option>
-                     <option value="2"> 2 </option>
-                     <option value="3"> 3 </option>
-                     <option value="4"> 4 </option>
-                     <option value="5"> 5 </option>
-                     <option value="6"> 6 </option>
-                     <option value="7"> 7 </option>
-                    <option value="8"> 8 </option>
-                     <option value="9"> 9 </option>
-                      <option value="10"> 10 </option>
-                 </select>
-             </div>
 
-             <div class="form-group">
-                 <label for="izaberiDatum">Izaberi datum:</label>
-                 <input type="date" id="izaberiDatum" name="izaberiDatum">
-           </div>
-
-           <div class="form-group">
-               <button type="submit">Rezervisi</button>
-           </div>
+<div class="customKontejner">
+       <label class="control-label required" for="select">Znamenitosti</label>
+             <div class="select">
+                <select id="select" name="select" class="form-control" multiple>
+                    <option value="">Cele Kula</option>
+                    <option value="">Tvrdjava</option>
+                    <option value="">Bubanj</option>
+                    <option value="">Cegar</option>
+                </select>
+            </div>
+                                      
+<form method="post">
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <label>@Model.ErrorMessage</label>
+    <div class="custom">
+    <div>Broj Osoba: <input asp-for="JednaRezervacija.BrojOsoba" /></div>
+    <div>ID vodica: <input asp-for="JednaRezervacija.IdvodicaRez"/></div>
+    <div>Vas ID: <input asp-for="JednaRezervacija.IdturisteRez"/></div>
+    <div>Datum izvodjenja <input asp-for="JednaRezervacija.DatumIzvodjenja" /></div>
+    <button type="submit">Dodaj</button>
     </div>
+</form>
 </div>
-
-
-
-
