--- a/Aplikacija/Prototip/Projekat_1/wwwroot/css/site.css
+++ b/Aplikacija/Prototip/Projekat_1/wwwroot/css/site.css
@@ -183,3 +183,12 @@ input[type=text]:focus {
 input[type=text]:placeholder {
   color: #cccccc;
 }
+
+.form-control
+{
+  width: 150px;
+}
+.custom div
+{
+  margin: 5px;
+}
