--- a/Aplikacija/Prototip/Projekat_1/Pages/JednaRezervacija.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JednaRezervacija.cshtml
@@ -5,8 +5,9 @@
 }
 
 <form method="get">
-    <div>Broj osoba: @Model.TrenutnaRezervacija.BrojOsoba.</div>
-    <div>ID turiste: @Model.TrenutnaRezervacija.IdturisteRez.</div>
-    <div>ID vodica: @Model.TrenutnaRezervacija.IdvodicaRez.</div>
+    <div>ID rezervacije: @Model.TrenutnaRezervacija.Idrezervacije</div>
+    <div>ID turiste: @Model.TrenutnaRezervacija.IdturisteRez</div>
+    <div>ID vodica: @Model.TrenutnaRezervacija.IdvodicaRez</div>
+    <div>Broj osoba: @Model.TrenutnaRezervacija.BrojOsoba</div>
     <div> Datum izvodjenja: @Model.TrenutnaRezervacija.DatumIzvodjenja</div>
 </form>
