--- a/Aplikacija/Prototip/Projekat_1/Pages/Vodici.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Vodici.cshtml
@@ -31,28 +31,44 @@
       <td>Petar</td>
       <td>Petrović</td>
       <td>10</td>
-      <td><button type="button" class="btn btn-primary">Prikazi više</button></td>
+      <td>
+	  <form action="/JedanVodic">
+	  <button type="button" class="btn btn-primary">Prikazi više</button>
+	  </form>
+	  </td>
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Ana</td>
       <td>Antić</td>
       <td>9,5</td>
-      <td><button type="button" class="btn btn-primary">Prikazi više</button></td>
+      <td>
+	  <form action="/JedanVodic">
+	  <button type="button" class="btn btn-primary">Prikazi više</button>
+	  </form>
+	  </td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Sonja</td>
       <td>Savić</td>
       <td>9,1</td>
-      <td><button type="button" class="btn btn-primary">Prikazi više</button></td>
+      <td>
+	  <form action="/JedanVodic">
+	  <button type="button" class="btn btn-primary">Prikazi više</button>
+	  </form>
+	  </td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Milan</td>
       <td>Mitrović</td>
       <td>8,3</td>
-      <td><button type="button" class="btn btn-primary">Prikazi više</button></td>
+      <td>
+	  <form action="/JedanVodic">
+	  <button type="button" class="btn btn-primary">Prikazi više</button>
+	  </form>
+	  </td>
     </tr>
   </tbody>
 </table>
