--- a/Aplikacija/Prototip/Projekat_1/Pages/CustomRezervacija.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/CustomRezervacija.cshtml
@@ -21,8 +21,8 @@
     <label>@Model.ErrorMessage</label>
     <div class="custom">
     <div>Broj Osoba: <input asp-for="JednaRezervacija.BrojOsoba" /></div>
-    <div>ID vodica: <input asp-for="JednaRezervacija.IdvodicaRez"/></div>
-    <div>Vas ID: <input asp-for="JednaRezervacija.IdturisteRez"/></div>
+    <div>ID vodica: <input asp-for="JednaRezervacija.IdVodicaRez"/></div>
+    <div>Vas ID: <input asp-for="JednaRezervacija.IdTuristeRez"/></div>
     <div>Datum izvodjenja <input asp-for="JednaRezervacija.DatumIzvodjenja" /></div>
     <button type="submit">Dodaj</button>
     </div>
