--- a/Aplikacija/Prototip/Projekat_1/Pages/Rezervacije.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Rezervacije.cshtml
@@ -21,9 +21,9 @@
     {
         <tbody>
     <tr>
-      <th scope="row"> @rezervacija.Idrezervacije</th>
+      <th scope="row"> @rezervacija.IdRezervacije</th>
       <td>@rezervacija.DatumIzvodjenja</td>
-      <td><a asp-page="./JednaRezervacija/" asp-route-id="@rezervacija.Idrezervacije">Prikazi detalje</a></td>
+      <td><a asp-page="./JednaRezervacija/" asp-route-id="@rezervacija.IdRezervacije">Prikazi detalje</a></td>
     </tr>
         </tbody>
     }
