--- a/Aplikacija/Prototip/Projekat_1/Pages/Znamenitosti.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Znamenitosti.cshtml
@@ -14,7 +14,7 @@
         <div> 
             <h3> Ime znamenitosti: @znamenitost.NazivZnamenitosti</h3>
             <p> Lokacija: @znamenitost.LokacijaZnamenitosti</p>
-            <a asp-page="./JednaZnamenitost/" asp-route-id="@znamenitost.Idznamenitosti">Prikazi detalje</a>
+            <a asp-page="./JednaZnamenitost/" asp-route-id="@znamenitost.IdZnamenitosti">Prikazi detalje</a>
         </div>
     }
 </form>
