--- a/Aplikacija/Prototip/Projekat_1/Pages/JednaRezervacija.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JednaRezervacija.cshtml
@@ -5,9 +5,9 @@
 }
 
 <form method="get">
-    <div>ID rezervacije: @Model.TrenutnaRezervacija.Idrezervacije</div>
-    <div>ID turiste: @Model.TrenutnaRezervacija.IdturisteRez</div>
-    <div>ID vodica: @Model.TrenutnaRezervacija.IdvodicaRez</div>
+    <div>ID rezervacije: @Model.TrenutnaRezervacija.IdRezervacije</div>
+    <div>ID turiste: @Model.TrenutnaRezervacija.IdTuristeRez</div>
+    <div>ID vodica: @Model.TrenutnaRezervacija.IdVodicaRez</div>
     <div>Broj osoba: @Model.TrenutnaRezervacija.BrojOsoba</div>
     <div> Datum izvodjenja: @Model.TrenutnaRezervacija.DatumIzvodjenja</div>
 </form>
