--- a/Aplikacija/Prototip/Projekat_1/Pages/AddTure.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/AddTure.cshtml
@@ -92,6 +92,6 @@
     </div>
     <div></div>
     <div>
-        <button type="button" class="btn btn-primary">KREIRAJ TURU</button>
+        <button type="submit" class="btn btn-primary">KREIRAJ TURU</button>
     </div>
 </form>
