--- a/Aplikacija/Prototip/Projekat_1/Pages/JedanKviz.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JedanKviz.cshtml
@@ -1,5 +1,45 @@
 @page
 @model Projekat_1.JedanKvizModel
 @{
- ViewData["Title"]="Kviz";
+ ViewData["Title"]="JedanKviz";
 }
+
+
+<form method="get">
+    @foreach (var pitanje in Model.SvaPitanja)
+    {
+      
+        
+         <div> 
+              <p>@pitanje.Idpitanje</p>
+            <p>@pitanje.Tekstpitanja</p>
+     @foreach (var odgovor in Model.SviOdgovori)
+    {
+       if(@odgovor.Pitanjeid==@pitanje.Idpitanje)
+       {
+    
+         <div id=@odgovor.Idodgovor class=@odgovor.Tacno onclick="izabran()">@odgovor.Tekstodg</div>
+
+       }
+              
+    }
+        </div>
+        
+        
+    }
+
+<script>
+function izabran() {
+    var elements = document.getElementsByClassName('1'); // get all elements
+	for(var i = 0; i < elements.length; i++){
+		elements[i].style.backgroundColor = "green";
+	}
+     var elements = document.getElementsByClassName('0'); // get all elements
+	for(var i = 0; i < elements.length; i++){
+		elements[i].style.backgroundColor = "red";
+	}
+}
+</script>
+       
+    
+</form>
