--- a/Aplikacija/Prototip/Projekat_1/Pages/Prijava.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Prijava.cshtml
@@ -8,8 +8,8 @@
 <div class="prijava fadeInDown">
   <div id="formContent">
     <form>
-      <input type="text" id="korisnickoIme" class="fadeIn first" name="login" placeholder="Korisnicko ime">
-      <input type="text" id="lozinka" class="fadeIn second" name="login" placeholder="Lozinka">
+      <input type="text" id="korisnickoIme" class="fadeIn first" name="login" placeholder="Korisnicko ime" asp-for="TrenutniKorisnik.Username">
+      <input type="text" id="lozinka" class="fadeIn second" name="login" placeholder="Lozinka" asp-for="TrenutniKorisnik.Password">
       <input type="submit" class="fadeIn third" value="Prijavi se">
     </form>
 
