--- a/Aplikacija/Prototip/Projekat_1/Pages/JednaTura.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JednaTura.cshtml
@@ -1,4 +1,14 @@
 ﻿@page
 @model Projekat_1.JednaTuraModel
 @{
+    ViewData["Title"]="JednaTura";
 }
+
+<form method="get">
+    <h3>@Model.TrenutnaTura.NazivTure</h3>
+
+    <p>Ova tura obuhvata znamenitosti... </p>
+    <p>Dan odrzavanja, vreme, vodic, znamenitosti, detalji.</p>
+
+
+</form>
