--- a/Aplikacija/Prototip/Projekat_1/Pages/OceniVodica.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/OceniVodica.cshtml
@@ -4,28 +4,27 @@
     ViewData["Title"] = "Oceni vodica";
 }
 
-
-<div class="oceni fadeInDown">
-  <div id="formContent">
-    <form>
+<form method="post">
+  <div class="oceni fadeInDown">
+    <div id="formContent">
       <div class="form-group">
-    <label for="ocene">Oceni vodiča</label>
-    <select class="form-control" id="ocene">
-      <option>10</option>
-      <option>9</option>
-      <option>8</option>
-      <option>7</option>
-      <option>6</option>
-      <option>5</option>
-      <option>4</option>
-      <option>3</option>
-      <option>2</option>
-      <option>1</option>
-    </select>
+        <label for="ocene">Oceni vodiča</label>
+        <select class="form-control" id="ocene" asp-for="JednaOcena.Ocena">
+          <option>10</option>
+          <option>9</option>
+          <option>8</option>
+          <option>7</option>
+          <option>6</option>
+          <option>5</option>
+          <option>4</option>
+          <option>3</option>
+          <option>2</option>
+          <option>1</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary">Oceni</button>
+    </div>
   </div>
-   <button type="submit" class="btn btn-primary">Oceni</button>
-    
 </form>
 
-  </div>
-</div>
+ 
