--- a/Aplikacija/Prototip/Projekat_1/Pages/JedanKviz.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JedanKviz.cshtml
@@ -5,41 +5,31 @@
 }
 
 
-<form method="get">
+<form>
+  <ol type="1">
     @foreach (var pitanje in Model.SvaPitanja)
     {
       
         
-         <div> 
-              <p>@pitanje.Idpitanje</p>
-            <p>@pitanje.Tekstpitanja</p>
+         <li>
+           @pitanje.Tekstpitanja
+           <input type="hidden" name="Idpitanje" value="@pitanje.Idpitanje"/>
+           <ol type="a">
      @foreach (var odgovor in Model.SviOdgovori)
     {
        if(@odgovor.Pitanjeid==@pitanje.Idpitanje)
        {
-    
-         <div id=@odgovor.Idodgovor class=@odgovor.Tacno onclick="izabran()">@odgovor.Tekstodg</div>
-
+         <li>
+         <input type="radio" name="pitanje_@pitanje.Idpitanje" value="@odgovor.Idodgovor"/>  
+         @odgovor.Tekstodg
+         </li>
        }
               
     }
-        </div>
-        
-        
+    </ol>
+        </li>
     }
-
-<script>
-function izabran() {
-    var elements = document.getElementsByClassName('1'); // get all elements
-	for(var i = 0; i < elements.length; i++){
-		elements[i].style.backgroundColor = "green";
-	}
-     var elements = document.getElementsByClassName('0'); // get all elements
-	for(var i = 0; i < elements.length; i++){
-		elements[i].style.backgroundColor = "red";
-	}
-}
-</script>
-       
-    
+    </ol>
+    <input type="submit" value="Rezultat"/>
+           
 </form>
