--- a/Aplikacija/Prototip/Projekat_1/Pages/Pitanja.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Pitanja.cshtml
@@ -26,7 +26,7 @@
       <td>@pitanje.Idpitanje</td>
       <td>@pitanje.Tekstpitanja</td>
       <td>@pitanje.Kvizid</td>
-      <td> <a asp-page="./Odgovori/" asp-route-id="@pitanje.Idpitanje">Prikazi detalje</a></td>
+      <td> <a asp-page="./Odgovori/" asp-route-id="@pitanje.Idpitanje">Prikazi odgovore</a></td>
     </tr>
         </tbody>
     }
