--- a/Aplikacija/Prototip/Projekat_1/Pages/HallOfFame.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/HallOfFame.cshtml
@@ -8,9 +8,9 @@
         <h1>@ViewData["Title"]</h1>
     </div>
 
-<div class="uradi">
-    <p>Uradi kviz <button type="button" class="btn-uradi">Započni kviz</button></p>
-</div>
+ <div class="uradi">
+<a asp-page="./Kvizovi/">Uradi kviz</a></td>
+ </div>
 
 <table class="table">
   <thead>
