--- a/Aplikacija/Prototip/Projekat_1/Pages/JedanKvizAdmin.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/JedanKvizAdmin.cshtml
@@ -8,9 +8,9 @@
     <h1>@ViewData["Title"]</h1>
 </div>
 
-<div>
-    <button type="button" class="btn btn-primary">Dodaj novo pitanje</button>
-</div>
+<form> 
+    <a asp-page="./AddPitanje/" >Dodaj pitanje</a>
+</form>
 
 <ul class="list-group">
     <li class="list-group-item d-flex justify-content-between align-items-center">
