--- a/Aplikacija/Prototip/Projekat_1/Pages/Kvizovi.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Kvizovi.cshtml
@@ -8,9 +8,6 @@
     <h1>@ViewData["Title"]</h1>
 </div>
 
-<div>
-<button type="button" class="btn btn-primary">Dodaj novi kviz</button>
-</div>
 
 <table class="table">
   <thead>
@@ -28,7 +25,7 @@
     <tr>
       <th scope="row"> @kviz.Idkviz</th>
       <td>@kviz.Nazivkviza</td>
-      <td><a asp-page="./JedanKviz/" asp-route-id="@kviz.Idkviz">Prikazi detalje</a></td>
+      <td><a asp-page="./JedanKviz/" asp-route-id="@kviz.Idkviz">Uradi kviz</a></td>
     </tr>
         </tbody>
     }
