--- a/Aplikacija/Prototip/Projekat_1/Pages/Rezervacije.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Rezervacije.cshtml
@@ -8,11 +8,12 @@
         <h1>@ViewData["Title"]</h1>
     </div>
 
-<table class="table">
+<table  class="table table-striped table-dark table-bordered" style="text-align: center">
   <thead>
     <tr>
       <th scope="col">ID rezervacije</th>
       <th scope="col">Datum izvodjenja</th>
+      <th scope="col">Detalji rezervacije</th>
     </tr>
   </thead>
 
