--- a/Aplikacija/Prototip/Projekat_1/Pages/Odgovori.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Odgovori.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<table class="table">
+<table class="table table-striped table-dark table-bordered" style="text-align: center">
   <thead>
     <tr>
       <th scope="col">ID odgovora</th>
