--- a/Aplikacija/Prototip/Projekat_1/Pages/Kvizovi.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Kvizovi.cshtml
@@ -14,6 +14,7 @@
     <tr>
       <th scope="col">ID Kviza</th>
       <th scope="col">Naziv Kviza</th>
+       <th scope="col"></th>
     </tr>
   </thead>
 
