--- a/Aplikacija/Prototip/Projekat_1/Pages/Ture.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Ture.cshtml
@@ -28,12 +28,13 @@
                 <td>@ture.IdTure</td>
                 <td>@ture.NazivTure</td>
                 <td></td>
+                <td>@ture.IdVodicaTura</td>
+                <td>@ture.DatumOdrzavanja</td>
+                <td>@ture.VremeOdrzavanja</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td> <a asp-route-id="@ture.IdTure" asp-page="./IzmeniTuru">Izmeni turu</a> </td>
+                <td> <a asp-route-id="@ture.IdTure" asp-page="./IzmeniTuru">Izmeni turu</a> </td>                
                 <td> <button class="btn btn-danger" type="submit" asp-route-id="@ture.IdTure" asp-page-handler="Obrisi">Obrisi turu</button>  </td>
+                <td> <button class="btn btn-success" type="submit" asp-route-id="@ture.IdTure" asp-page-handler="Rezervisi">Rezervisi turu</button> </td>
             </tr> 
         }
     </table>
