--- a/Aplikacija/Prototip/Projekat_1/Pages/AddPitanje.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/AddPitanje.cshtml
@@ -7,7 +7,7 @@
 <form method="post"> 
     <div asp-validation-summary="All" class="text-danger"></div>
     <label>@Model.ErrorMessage</label>
-    <div>Tekst Pitanja: <input asp-for="JednoPitanje.Tekstpitanja" /></div>
-    <div>Id kviza: <input asp-for="JednoPitanje.Kvizid" /></div>
+    <div>Tekst Pitanja: <input asp-for="JednoPitanje.TekstPitanja" /></div>
+    <div>Id kviza: <input asp-for="JednoPitanje.KvizId" /></div>
     <button type="submit">Dodaj</button>
 </form>
