--- a/Aplikacija/Prototip/Projekat_1/Pages/Odgovori.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Odgovori.cshtml
@@ -19,9 +19,9 @@
     {
         <tbody>
     <tr>
-      <td>@odgovor.Idodgovor</td>
-      <td>@odgovor.Tekstodg</td>
-      <td>@odgovor.Pitanjeid</td>
+      <td>@odgovor.IdOdgovor</td>
+      <td>@odgovor.TekstOdg</td>
+      <td>@odgovor.PitanjeId</td>
       <td>@odgovor.Tacno</td>
     </tr>
         </tbody>
