--- a/Aplikacija/Prototip/Projekat_1/Pages/Pitanja.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Pitanja.cshtml
@@ -26,11 +26,11 @@
     {
         <tbody>
     <tr>
-      <td>@pitanje.Idpitanje</td>
-      <td>@pitanje.Tekstpitanja</td>
-      <td>@pitanje.Kvizid</td>
-      <td> <a class="pitanje" asp-page="./Odgovori/" asp-route-id="@pitanje.Idpitanje">Prikazi odgovore</a></td>
-      <td> <button type="submit" class="pitanje" asp-route-id="@pitanje.Idpitanje" asp-page-handler="Obrisi">Obrisi pitanje</button>  </td>
+      <td>@pitanje.IdPitanje</td>
+      <td>@pitanje.TekstPitanja</td>
+      <td>@pitanje.KvizId</td>
+      <td> <a class="pitanje" asp-page="./Odgovori/" asp-route-id="@pitanje.IdPitanje">Prikazi odgovore</a></td>
+      <td> <button type="submit" class="pitanje" asp-route-id="@pitanje.IdPitanje" asp-page-handler="Obrisi">Obrisi pitanje</button>  </td>
     </tr>
         </tbody>
     }
