--- a/Aplikacija/Prototip/Projekat_1/Pages/AddOdgovor.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/AddOdgovor.cshtml
@@ -7,8 +7,8 @@
 <form method="post"> 
     <div asp-validation-summary="All" class="text-danger"></div>
     <label>@Model.ErrorMessage</label>
-    <div>Tekst odgovora: <input asp-for="JedanOdgovor.Tekstodg" /></div>
-    <div>Id pitanje: <input asp-for="JedanOdgovor.Pitanjeid" /></div>
+    <div>Tekst odgovora: <input asp-for="JedanOdgovor.TekstOdg" /></div>
+    <div>Id pitanje: <input asp-for="JedanOdgovor.PitanjeId" /></div>
      <div>Da li je tacno: <input asp-for="JedanOdgovor.Tacno" /></div>
     <button type="submit">Dodaj</button>
 </form>
