--- a/Aplikacija/Prototip/Projekat_1/Pages/Kvizovi.cshtml
+++ b/Aplikacija/Prototip/Projekat_1/Pages/Kvizovi.cshtml
@@ -24,9 +24,9 @@
     {
         <tbody>
     <tr>
-      <th scope="row"> @kviz.Idkviz</th>
-      <td>@kviz.Nazivkviza</td>
-      <td><a asp-page="./JedanKviz/" asp-route-id="@kviz.Idkviz">Uradi kviz</a></td>
+      <th scope="row"> @kviz.IdKviz</th>
+      <td>@kviz.NazivKviza</td>
+      <td><a asp-page="./JedanKviz/" asp-route-id="@kviz.IdKviz">Uradi kviz</a></td>
     </tr>
         </tbody>
     }
